--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 		
 	</div>
 
-	<button class="btn">Back</button>
+	<button class="btn" href="https://aungmyo-genius.github.io/teampagev1/
+">Back</button>
 
 
 	<div class="tt">
