--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Happy Birthday!</title>
+	<link rel="icon" href="img/favicon.png" type="image/png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -249,5 +250,8 @@
 		<div class="square"></div>
 	</div>
 
+	<
+
 </body>
 </html>
+
