--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 	}
 
 	.btn{
+		text-decoration: none;
 		font-size: 35px;
-		background-color: lightblue;
+		background-color:  #ede8a4;
 		border-radius: 10px;
 
 		position: absolute;
@@ -223,8 +224,8 @@
 		
 	</div>
 
-	<button class="btn" href="https://aungmyo-genius.github.io/teampagev1/
-">Back</button>
+	<a class="btn" href="https://aungmyo-genius.github.io/teampagev1/
+">Back</a>
 
 
 	<div class="tt">
@@ -254,4 +255,5 @@
 
 </body>
 </html>
+
 
